# cutting-stock

./: README.md  app.py  pyproject.toml
